new_tests/semantics/type/bad/035_IS1.cm

def a:Int = 5
def b:Int = 6

if(a + b) { }
